# fastapi-graphql-nextjs

.github/workflows/: build-image.yml
backend/: .env  .gitignore  db_dump.py  db_prestart.py  docker-compose.yaml  heroes.sql  heroes.yaml  package-lock.json  pyproject.toml  schema.graphql  skills.sql  start.sh  test.ts
backend/alembic/: env.py
backend/alembic/versions/: 3b2d8c29275a_add_skill_hero_table.py
backend/app/: main.py
backend/app/core/: config.py  container.py
backend/app/database/: init_database.py
backend/app/graphql/: context.py  mutation.py  query.py  types.py
backend/app/models/: __init__.py  base.py  hero.py  skill.py
backend/app/repositories/: hero.py  skill.py
backend/app/routers/: hero.py
backend/app/services/: hero.py  skill.py
frontend/: convertStrapiTypes.js  frontend-deployment.yml  frontend.dockerfile  package.json  test.js
frontend/src/: genStatic.ts  genStaticConfig.ts  query.ts
frontend/src/app/: AddHero.tsx  AddHeroCSR.tsx  ConfigProvider.tsx  HeroButton.tsx  HeroCSR.tsx  HeroDisplay.tsx  HeroSSR.tsx  RandomButton.tsx  config.ts  interface.ts  layout.tsx  page.tsx  useGraphQL.ts
frontend/src/app/blogs/: BlogDetail.tsx  BlogsPagination.tsx  Template.tsx  page.tsx
frontend/src/app/blogs/[id]/: page.tsx
frontend/src/config/: strapi.ts
frontend/src/graphql/: client.ts  convertedStrapiTypes.ts  generatedTypes.ts  interface.ts  query.ts  rawStrapiTypes.ts  strapiGeneratedTypes.ts  utils.ts
strapi/: package.json
strapi/src/api/blog/content-types/blog/: schema.json
